[package]
name = "fetch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core = "0.148.0"
reqwest = { version = "0.11", features = ["rustls-tls", "stream", "gzip", "brotli", "socks"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0.143"
bytes = "1.2.1"
tokio-util = "0.7.3"
tokio-stream = "0.1.8"
deno_web = "0.97.0"
deno_webidl = "0.66.0"
deno_url = "0.66.0"